2000-11-29  Levente Novak  <novak@jaguar.dote.hu>

        * docs/gnuplot.doc docs/gnuplot.texi docs/psdoc/README
	docs/psdoc/ps_guide.ps lisp/gnuplot-gui.el src/set.c src/term.c
	src/term_api.h term/post.trm: a patch enabling the PostScript
	terminal to use ISO-8859-2 encoding. 

2000-11-27  Alexander Mai  <st002279@hrzpub.tu-darmstadt.de>

        * src/readline.c: readline.c did not built with HAVE_LIBREADLINE.
	                  So remove an #ifdef and - being here -
			  make two symbols static

2000-11-24  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/Makefile.in: New variables BUILT_SOURCES, CLEANFILES. Reorganise
	clean target.

	* src/color.c, src/gadgets.c, src/getcolor.c, src/gpexecute.c,
	src/gplt_x11.c, src/mouse.c, src/pm3d.c: Coding style.

2000-11-24  Alexander Mai  <st002279@hrzpub.tu-darmstadt.de>

        * docs/gnuplot.doc: Update FAQ location.
	                    Remove "'" characters from headers to
			    make gnuplot.texi 'TeXable' again

2000-11-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* configure.in config/makefile.os2 term/x11.trm src/gpexecute.h
	src/ipc.h command.c gpexecute.c gplt_x11.c plot.c readline.c:
	The patch introduces explicit #define directives for different types
	of interprocess communication (gnupmdrv, gnuplot_x11 => gnuplot):
	    OS2_IPC  ... the OS/2 shared memory + event semaphores approach,
	    PIPE_IPC ... communication by using bidirectional pipe.
	In the current sources, there is a mixture of #ifdef USE_MOUSE,
	#if[n]def OS2, or #if defined() && () ... This patch makes it clear
	what code is for what kind of IPC, while #ifdef USE_MOUSE ... #endif
	parts don't mix with IPC codes. Of course, USE_MOUSE requires either
	IPC defined.
	  Now it should be easy to add any other IPC for whichever platform
	with terminal independent from the main gnuplot executable which wants
	to support mouse and hotkeys; or modify PIPE_IPC to work for it too.
	For example, gnuplot + gnuplot_x11 compiles on OS/2 fine with PIPE_IPC