@@ -1,5 +1,5 @@
 /*
- * $Id: syscfg.h,v 1.13 2000/11/01 18:57:33 broeker Exp $
+ * $Id: syscfg.h,v 1.14 2000/11/03 11:44:04 broeker Exp $
  */
 
 /* GNUPLOT - syscfg.h */
@@ -229,9 +229,11 @@
 #endif
 
 #ifndef FAQ_LOCATION
-/* Prepare the transition! Yess! */
-/* #define FAQ_LOCATION "http://www.gnuplot.org/gnuplot-faq.html" */
+#define FAQ_LOCATION "http://www.gnuplot.org/faq"
+/*
+#define FAQ_LOCATION "http://www.gnuplot.org/gnuplot-faq.html"
 #define FAQ_LOCATION "http://www.ucc.ie/gnuplot/gnuplot-faq.html"
+*/
 #endif
 
 #ifndef CONTACT
